--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/reblate_favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Reblate Solutions | The Right Solution for Your Business</title>
+    <script type="text/javascript" src="//widget.trustpilot.com/bootstrap/v5/tp.widget.bootstrap.min.js" async></script>
+    
   </head>
   <body>
     <div id="root"></div>
