--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/reblate_favicon.png" />
+    <link rel="canonical" href="https://reblatesols.com" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="facebook-domain-verification" content="dat745utwmpbf6zstyxvus140wtua2" /> <meta name="description" content="Reblate Solutions is a Company that offers E-Commerce, Online Business and Development Services.">
     <!-- Clarity tracking code for https://reblatesols.com/ -->
